--- a/addon/components/ember-theater/director/character/template.hbs
+++ b/addon/components/ember-theater/director/character/template.hbs
@@ -2,8 +2,7 @@
   <div class='et-character-expression-container'>
     {{ember-theater/director/character/expression
       expression=expressionContainer.expression
-      autoResolve=autoResolve
-      line=expressionContainer.line
+      directable=expressionContainer.directable
     }}
   </div>
 {{/each}}
