--- a/addon/components/ember-theater/menu-bar/save/menu/template.hbs
+++ b/addon/components/ember-theater/menu-bar/save/menu/template.hbs
@@ -1,3 +1,3 @@
-{{#if line}}
-  {{ember-theater/director/choice line=line}}
+{{#if directable}}
+  {{ember-theater/director/choice directable=directable}}
 {{/if}}
