--- a/addon/styles/components/_ember-modal-dialog.scss
+++ b/addon/styles/components/_ember-modal-dialog.scss
@@ -1,26 +1,13 @@
-.ember-modal-dialog {
-  border-radius: 8px;
-  background-color: #fff;
-  box-shadow: 0 0 10px #222;
-  padding: 10px;
-}
-.ember-modal-overlay.translucent {
-  background-color: rgba(#808080, .77);
-}
-
 .ember-modal-overlay {
-  height: 100vh;
+  position: absolute;
   left: 0;
-  position: fixed;
   right: 0;
   top: 0;
-  z-index: 50;
+  bottom: 0;
+  z-index: 999999;
+  background-color: rgba(#808080, 0.77);
 }
-.ember-modal-dialog {
-  z-index: 50;
-  position: fixed;
 
-  &.ember-modal-dialog-in-place {
-    position: relative;
-  }
+.ember-modal-dialog {
+  z-index: 9999999;
 }
