--- a/addon/styles/variables/components/_menu-bar.scss
+++ b/addon/styles/variables/components/_menu-bar.scss
@@ -15,3 +15,11 @@ $et-menu-bar-dropdown-padding: $et-menu-bar-vertical-rhythm * 2 4vh !default;
 $et-menu-bar-dropdown-background-color: $et-secondary-color !default;
 
 $et-menu-bar-save-menu-button-padding: 0 2vh !default;
+
+$et-confirm-box-rhythm: 0.1vw !default;
+$et-confirm-box-font-size: $et-default-font-size !default;
+$et-confirm-box-padding: $et-confirm-box-rhythm * 5 !default;
+$et-confirm-box-background-color: $et-secondary-color !default;
+$et-confirm-box-color: $et-neutral-color !default;
+
+$et-confirm-box-buttons-margin: $et-confirm-box-rhythm * 5 !default;
