--- a/addon/components/ember-theater/director/dialogue/text/template.hbs
+++ b/addon/components/ember-theater/director/dialogue/text/template.hbs
@@ -1,6 +1,3 @@
-{{letter-by-letter
-  activeWordIndex=activeWordIndex
-  speed=textSpeed
-  wordByWord=wordByWord
-  words=visibleWords
-  textComplete=(action 'textComplete')}}
+<div class='et-dialogue-body'>
+  {{formattedText}}
+</div>
