simplify dialogue component

--- a/addon/components/ember-theater/director/dialogue/template.hbs
+++ b/addon/components/ember-theater/director/dialogue/template.hbs
@@ -2,6 +2,7 @@
   <div class='et-dialogue-caption'>{{name}}</div>
 {{/if}}
 {{ember-theater/director/dialogue/text
+  instantWriteText=instantWriteText
   keys=keys
   text=text
   textSpeed=textSpeed
