fix keyboard priority

--- a/addon/components/ember-theater/director/choice/option/template.hbs
+++ b/addon/components/ember-theater/director/choice/option/template.hbs
@@ -10,6 +10,7 @@
     activeIndex=activeIndex
     index=index
     choice=choice
+    keyboardPriority=keyboardPriority
     focusDown=focusDown
     focusUp=focusUp
     choose=(action 'choose' choice)
