--- a/addon/components/ember-theater/director/choice/template.hbs
+++ b/addon/components/ember-theater/director/choice/template.hbs
@@ -5,6 +5,7 @@
   {{ember-theater/director/choice/option
     activeIndex=activeIndex
     index=index
+    keyboardPriority=keyboardPriority
     choice=choice
     choose=(action 'choose' choice)
     focusDown=(action 'focusDown' index)
