convert choice to use an array

--- a/addon/components/ember-theater/menu-bar/load/menu/template.hbs
+++ b/addon/components/ember-theater/menu-bar/load/menu/template.hbs
@@ -1,3 +1,7 @@
 {{#if directable}}
-  {{ember-theater/director/choice directable=directable}}
+  {{ember-theater/director/choice
+    activeIndex=1
+    directable=directable
+    keyboardPriority=10000
+  }}
 {{/if}}
