--- a/addon/components/ember-theater/menu-bar/menu/template.hbs
+++ b/addon/components/ember-theater/menu-bar/menu/template.hbs
@@ -1,1 +1,7 @@
-{{yield}}
+{{#if directable}}
+  {{ember-theater/director/choice
+    activeIndex=1
+    directable=directable
+    keyboardPriority=10000
+  }}
+{{/if}}
