move initial state to config

--- a/addon/components/ember-theater/menu-bar/template.hbs
+++ b/addon/components/ember-theater/menu-bar/template.hbs
@@ -1,5 +1,5 @@
 <div class='et-menu-bar'>
-  {{#each options as |componentName|}}
+  {{#each components as |componentName|}}
     {{component componentName}}
   {{/each}}
 </div>
