--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -1,3 +1,1 @@
-{{ember-theater
-  initialEmberTheaterComponents=initialEmberTheaterComponents
-  initialEmberTheaterData=initialEmberTheaterData}}
+{{ember-theater}}
