--- a/app/styles/variables/components/_choice.scss
+++ b/app/styles/variables/components/_choice.scss
@@ -12,6 +12,9 @@ $et-choice-header-font-size: $et-large-font-size !default;
 $et-choice-header-margin-bottom: $et-choice-rhythm * 10 !default;
 
 $et-choice-option-margin-bottom: $et-choice-rhythm !default;
+$et-choice-option-font-size: $et-small-font-size !default;
+$et-choice-option-font-weight: bold !default;
+$et-choice-option-font-family: $et-primary-sans-serif !default;
 
 $et-choice-child-line-height: $et-default-line-height !default;
 $et-choice-child-text-align: center !default;
