--- a/addon/components/ember-theater/director/choice/template.hbs
+++ b/addon/components/ember-theater/director/choice/template.hbs
@@ -7,6 +7,9 @@
     index=index
     keyboardPriority=keyboardPriority
     choice=choice
+    moveUpKeys=moveUpKeys
+    moveDownKeys=moveDownKeys
+    cancelKeys=cancelKeys
     choose=(action 'choose' choice)
     focusDown=(action 'focusDown' index)
     focusUp=(action 'focusUp' index)
