make styles configurable

--- a/app/styles/_mixins.scss
+++ b/app/styles/_mixins.scss
@@ -2,5 +2,8 @@
 @import "mixins/full-screen";
 @import "mixins/hidden";
 @import "mixins/input";
-@import "mixins/panel";
 @import "mixins/sr-only";
+
+@import "mixins/coastal";
+@import "mixins/ember";
+@import "mixins/paper";
