--- a/app/styles/mixins/_input.scss
+++ b/app/styles/mixins/_input.scss
@@ -1,13 +1,8 @@
 .et-input {
-  border: $et-input-border-width solid $et-input-border-color;
-  background: $et-input-background-color;
-  color: $et-input-color;
+  border-width: $et-input-border-width;
+  border-style: solid;
   border-radius: $et-input-border-radius;
   font-size: $et-input-font-size;
   transition: border $et-input-transition-speed ease;
   box-sizing: border-box;
-
-  &:focus {
-    border-color: $et-input-focus-border-color;
-  }
-} 
+}
