--- a/app/styles/variables/components/_dialogue.scss
+++ b/app/styles/variables/components/_dialogue.scss
@@ -1,22 +1,38 @@
 $et-dialogue-padding-base: 2.17vh;
 
-$et-dialogue-bottom: 0 !default;
-$et-dialogue-padding: $et-dialogue-padding-base $et-dialogue-padding-base * 2 !default;
-$et-dialogue-opacity: $et-semi-transparency !default;
 $et-dialogue-font-size: $et-default-font-size !default;
+$et-dialogue-caption-font-size: $et-tiny-font-size !default;
 $et-dialogue-text-align: justify !default;
 
-$et-dialogue-caption-padding: 0 $et-dialogue-padding-base !default;
-$et-dialogue-caption-font-size: $et-tiny-font-size !default;
-$et-dialogue-caption-font-family: $et-primary-sans-serif !default;
 $et-dialogue-caption-font-weight: bold !default;
-$et-dialogue-caption-top: $et-dialogue-caption-font-size * -1.5 !default;
-$et-dialogue-caption-left: $et-dialogue-padding-base !default;
 
-$et-dialogue-wide-width: 100vw !default;
-$et-dialogue-wide-right: (100 - $et-dialogue-wide-width) / 2 !default;
-$et-dialogue-wide-left: (100 - $et-dialogue-wide-width) / 2 !default;
-$et-dialogue-wide-line-height: $et-default-line-height !default;
-$et-dialogue-wide-height: ($et-dialogue-wide-line-height * 3) +
-                     ($et-panel-border-width * 2) +
-                     ($et-dialogue-padding-base * 2) !default;
+$et-dialogue-full-width-padding-base: $et-dialogue-padding-base !default;
+$et-dialogue-full-width-padding: $et-dialogue-full-width-padding-base $et-dialogue-full-width-padding-base * 2 !default;
+$et-dialogue-full-width-margin: 0 !default;
+$et-dialogue-full-width-font-size: $et-dialogue-font-size !default;
+$et-dialogue-full-width-bottom: 0 !default;
+$et-dialogue-full-width-line-height: $et-default-line-height !default;
+$et-dialogue-full-width-height: ($et-dialogue-full-width-line-height * 3) +
+                     ($et-coastal-border-width * 2) +
+                     ($et-dialogue-full-width-padding-base * 2) !default;
+
+$et-dialogue-caption-full-width-font-size: $et-dialogue-caption-font-size !default;
+$et-dialogue-caption-full-width-top: $et-dialogue-caption-full-width-font-size * -1.5 !default;
+$et-dialogue-caption-full-width-left: $et-dialogue-full-width-padding-base !default;
+$et-dialogue-caption-full-width-padding: 0 $et-dialogue-full-width-padding-base !default;
+
+$et-dialogue-opacity: $et-semi-transparency !default;
+$et-dialogue-font-family: $et-primary-serif !default;
+$et-dialogue-caption-font-family: $et-primary-sans-serif !default;
+
+$et-dialogue-coastal-opacity: $et-dialogue-opacity !default;
+$et-dialogue-coastal-font-family: $et-dialogue-font-family !default;
+$et-dialogue-caption-coastal-font-family: $et-dialogue-caption-font-family !default;
+
+$et-dialogue-ember-opacity: $et-dialogue-opacity !default;
+$et-dialogue-ember-font-family: $et-dialogue-font-family !default;
+$et-dialogue-caption-ember-font-family: $et-dialogue-caption-font-family !default;
+
+$et-dialogue-paper-opacity: $et-dialogue-opacity !default;
+$et-dialogue-paper-font-family: $et-dialogue-font-family !default;
+$et-dialogue-caption-paper-font-family: $et-dialogue-caption-font-family !default;
