--- a/addon/components/ember-theater/menu-bar/template.hbs
+++ b/addon/components/ember-theater/menu-bar/template.hbs
@@ -1,4 +1,4 @@
-<div class='et-menu-bar'>
+<div class='et-menu-bar {{configurableClassNames}}'>
   {{#each components as |componentName|}}
     {{component componentName}}
   {{/each}}
