--- a/app/styles/_mixins.scss
+++ b/app/styles/_mixins.scss
@@ -4,6 +4,6 @@
 @import "mixins/input";
 @import "mixins/sr-only";
 
-@import "mixins/coastal";
-@import "mixins/ember";
-@import "mixins/paper";
+@import "mixins/styles/coastal";
+@import "mixins/styles/ember";
+@import "mixins/styles/paper";
