--- a/app/styles/components/_ember-theater.scss
+++ b/app/styles/components/_ember-theater.scss
@@ -5,7 +5,14 @@
 
 .ember-theater {
   @extend .et-full-screen;
+  
   background-color: $et-blank-screen-background-color;
   font-family: $et-primary-font-family;
+
   overflow: hidden;
+  box-sizing: border-box;
+
+  *, *:before, *:after {
+    box-sizing: inherit;
+  }
 }
