--- a/app/styles/components/ember-theater/_director.scss
+++ b/app/styles/components/ember-theater/_director.scss
@@ -1,9 +1,10 @@
 @import "director/backdrop";
 @import "director/character";
 @import "director/choice";
-@import "director/dialogue";
+@import "director/text";
 
 .et-director {
   @extend .et-full-screen;
+  
   perspective: 30vh;
 }
