--- a/addon/components/ember-theater/director/text/template.hbs
+++ b/addon/components/ember-theater/director/text/template.hbs
@@ -1,5 +1,5 @@
 {{#if name}}
-  <div class='et-dialogue-caption'>{{name}}</div>
+  <div class='et-text-caption'>{{name}}</div>
 {{/if}}
 {{ember-theater/director/text/body
   instantWriteText=instantWriteText
