--- a/addon/components/ember-theater/menu-bar/reset/template.hbs
+++ b/addon/components/ember-theater/menu-bar/reset/template.hbs
@@ -1,8 +1,6 @@
 {{fa-icon 'refresh' spin=hovering}}
 {{#if isOpen}}
-  {{#ember-theater/menu-bar/confirm
-    cancel=(action 'cancel')
-    confirm=(action 'confirm')}}
-    If you reset the game, you'll lose all autosave progress.
-  {{/ember-theater/menu-bar/confirm}}
+  {{#modal-dialog}}
+    {{ember-theater/menu-bar/reset/menu closeMenu=(action 'closeMenu')}}
+  {{/modal-dialog}}
 {{/if}}
