--- a/app/styles/mixins/styles/_ember.scss
+++ b/app/styles/mixins/styles/_ember.scss
@@ -1,5 +1,6 @@
 @mixin et-ember-base {
-  border: $et-ember-border-width solid $et-ember-border-color;
+  border-style: $et-ember-border-style;
+  border-color: $et-ember-border-color;
   background: $et-ember-background;
   color: $et-ember-color;
 }
@@ -10,6 +11,8 @@
   .et-button {
     @include et-ember-base;
 
+    border-style: $et-button-ember-border-style;
+
     &:hover, &:focus {
       background-color: $et-button-ember-hover-background-color;
       color: $et-button-ember-hover-color;
@@ -18,6 +21,7 @@
 
   .et-input {
     border-color: $et-input-ember-border-color;
+    border-style: $et-input-ember-border-style;
     background: $et-input-ember-background-color;
     color: $et-input-ember-color;
 
