--- a/app/styles/variables/components/_choice.scss
+++ b/app/styles/variables/components/_choice.scss
@@ -1,40 +1,78 @@
-$et-choice-width: 62vw !default;
 $et-choice-rhythm: 0.1vw !default;
 
-$et-choice-top: 20% !default;
-$et-choice-right: (100 - $et-choice-width) / 2 !default;
-$et-choice-left: (100 - $et-choice-width) / 2 !default;
 $et-choice-padding: $et-choice-rhythm * 5 !default;
+$et-choice-border-width: $et-default-border-width !default;
+$et-choice-opacity: $et-semi-transparency !default;
 
 $et-choice-header-font-size: $et-large-font-size !default;
 $et-choice-header-margin-bottom: $et-choice-rhythm * 10 !default;
+$et-choice-header-font-family: $et-primary-serif !default;
 
-$et-choice-option-margin-bottom: $et-choice-rhythm !default;
+$et-choice-option-margin-bottom: $et-choice-rhythm * 2 !default;
 $et-choice-option-font-size: $et-small-font-size !default;
+$et-choice-option-width: 100% !default;
+$et-choice-option-font-weight: bold !default;
+$et-choice-option-font-family: $et-primary-sans-serif !default;
 
 $et-choice-child-line-height: $et-default-line-height !default;
 $et-choice-child-text-align: center !default;
 
-$et-choice-opacity: $et-semi-transparency !default;
-$et-choice-header-font-family: $et-primary-serif !default;
-$et-choice-option-font-weight: bold !default;
-$et-choice-option-font-family: $et-primary-sans-serif !default;
+// STRUCTURE STYLES
 
+// block
+$et-choice-block-width: 62vw !default;
+$et-choice-block-top: 20% !default;
+$et-choice-block-right: (100 - $et-choice-block-width) / 2 !default;
+$et-choice-block-left: (100 - $et-choice-block-width) / 2 !default;
+$et-choice-block-padding: $et-choice-padding !default;
+$et-choice-block-border-width: $et-choice-border-width !default;
+
+$et-choice-header-block-font-size: $et-choice-header-font-size !default;
+$et-choice-header-block-margin-bottom: $et-choice-header-margin-bottom !default;
+
+$et-choice-option-block-font-size: $et-choice-option-font-size !default;
+$et-choice-option-block-margin-bottom: $et-choice-option-margin-bottom !default;
+$et-choice-option-block-width: $et-choice-option-width !default;
+$et-choice-option-block-border-width: $et-choice-border-width !default;
+
+// full
+$et-choice-full-padding: $et-choice-padding $et-full-padding !default;
+$et-choice-full-border-width: $et-choice-border-width !default;
+
+$et-choice-header-full-font-size: $et-choice-header-font-size !default;
+$et-choice-header-full-margin-bottom: $et-choice-header-margin-bottom !default;
+
+$et-choice-option-full-font-size: $et-choice-option-font-size !default;
+$et-choice-option-full-margin-bottom: $et-choice-option-margin-bottom !default;
+$et-choice-option-full-width: $et-choice-option-width !default;
+$et-choice-option-full-border-width: $et-choice-border-width !default;
+
+// PRESENTATION STYLES
+
+// coastal
 $et-choice-coastal-background-color: $et-coastal-secondary-color !default;
 $et-choice-coastal-opacity: $et-choice-opacity !default;
+
 $et-choice-header-coastal-font-family: $et-choice-header-font-family !default;
+
 $et-choice-option-coastal-font-weight: $et-choice-option-font-weight !default;
 $et-choice-option-coastal-font-family: $et-choice-option-font-family !default;
 
+// ember
 $et-choice-ember-background-color: $et-ember-secondary-color !default;
 $et-choice-ember-opacity: $et-choice-opacity !default;
+
 $et-choice-header-ember-font-family: $et-choice-header-font-family !default;
+
 $et-choice-option-ember-font-weight: $et-choice-option-font-weight !default;
 $et-choice-option-ember-font-family: $et-choice-option-font-family !default;
 
-$et-choice-paper-background-color: $et-paper-secondary-color !default;
+// paper
+$et-choice-paper-background-color: $et-paper-primary-color !default;
 $et-choice-paper-opacity: $et-choice-opacity !default;
+
 $et-choice-header-paper-font-family: $et-choice-header-font-family !default;
-$et-choice-header-paper-color: $et-paper-primary-color !default;
+$et-choice-header-paper-color: $et-paper-secondary-color !default;
+
 $et-choice-option-paper-font-weight: $et-choice-option-font-weight !default;
 $et-choice-option-paper-font-family: $et-choice-option-font-family !default;
