--- a/app/styles/variables/mixins/styles/_ember.scss
+++ b/app/styles/variables/mixins/styles/_ember.scss
@@ -3,15 +3,19 @@ $et-ember-secondary-color: #AA412F !default;
 $et-ember-highlight-color: #f2d1cb !default;
 $et-ember-neutral-color: #FAF4F1 !default;
 
-$et-ember-border-width: $et-default-border-width !default;
+$et-ember-border-style: $et-default-border-style !default;
 $et-ember-border-color: $et-ember-secondary-color !default;
 $et-ember-background: $et-ember-primary-color !default;
 $et-ember-color: $et-ember-neutral-color !default;
 
+$et-button-ember-border-style: $et-default-border-style !default;
+
 $et-button-ember-hover-background-color: $et-ember-highlight-color !default;
 $et-button-ember-hover-color: $et-ember-primary-color !default;
 
-$et-input-ember-focus-border-color: $et-ember-highlight-color !default;
 $et-input-ember-background-color: $et-ember-neutral-color !default;
 $et-input-ember-color: $et-ember-primary-color !default;
 $et-input-ember-border-color: $et-ember-secondary-color !default;
+$et-input-ember-border-style: $et-button-ember-border-style !default;
+
+$et-input-ember-focus-border-color: $et-ember-highlight-color !default;
