make curtain pluggable

--- a/addon/components/ember-theater/template.hbs
+++ b/addon/components/ember-theater/template.hbs
@@ -3,5 +3,5 @@
     {{component componentName}}
   {{/each}}
 {{else}}
-  {{ember-theater/curtain complete=(action 'startGame')}}
+  {{component mediaLoader complete=(action 'startGame')}}
 {{/if}}
