--- a/app/styles/variables/components/_choice.scss
+++ b/app/styles/variables/components/_choice.scss
@@ -5,6 +5,7 @@ $et-choice-border-width: $et-default-border-width !default;
 $et-choice-opacity: $et-semi-transparency !default;
 
 $et-choice-header-font-size: $et-large-font-size !default;
+$et-choice-header-margin: 0 3vw !default;
 $et-choice-header-margin-bottom: $et-choice-rhythm * 10 !default;
 $et-choice-header-font-family: $et-primary-serif !default;
 
